--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "file-loader": "^0.8.4",
     "function-bind": "^1.0.2",
     "gulp": "^3.9.0",
+    "gulp-clean": "^0.3.1",
     "gulp-sftp": "^0.1.5",
     "html-webpack-plugin": "^1.7.0",
     "inject-loader": "^2.0.1",
