--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "karma start build/karma.conf.js --single-run"
   },
   "dependencies": {
+    "lodash": "^4.6.0",
     "vue": "^1.0.15",
     "vue-resource": "^0.6.1",
     "vue-router": "^0.7.11"
