--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "karma start build/karma.conf.js --single-run"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.6.0",
     "lodash": "^4.6.0",
     "vue": "^1.0.15",
     "vue-resource": "^0.6.1",
@@ -16,9 +17,9 @@
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
+    "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-runtime": "^5.8.0",
     "connect-history-api-fallback": "^1.1.0",
@@ -32,8 +33,9 @@
     "file-loader": "^0.8.4",
     "function-bind": "^1.0.2",
     "gulp": "^3.9.0",
-    "gulp-clean": "^0.3.1",
+    "gulp-clean": "^0.3.2",
     "gulp-sftp": "^0.1.5",
+    "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^1.7.0",
     "inject-loader": "^2.0.1",
     "jasmine-core": "^2.4.1",
@@ -55,7 +57,7 @@
     "url-loader": "^0.5.7",
     "vinyl-named": "^1.1.0",
     "vue-hot-reload-api": "^1.2.0",
-    "vue-html-loader": "^1.0.0",
+    "vue-html-loader": "^1.2.0",
     "vue-loader": "^8.0.0",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.12.2",
